--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
+/** ===========HEADER==============**/
+/** ===========NAV==============**/
+
+/** ===========ADRESS==============**/
 a {
   text-decoration: none;
 }
 ul {
   list-style: none;
 }
+/** ===============================**/
