--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 body {
   font-family: "Roboto", sans-serif;
   font-family: "Roboto", sans-serif;
-  color: #434455
+  color: #434455;
   background-color: #fff;
 }
 a {
@@ -30,7 +30,7 @@ ol {
 .header-logo-studio {
   color: #2e2f42;
 }
-.header-nav-menu-list {
+.header-nav-menu-item {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -38,14 +38,24 @@ ol {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.header-nav-menu-item {
-  color: #2e2f42;
+
+.header-nav-menu-item:hover {
+  color: #404bbf;
+  text-decoration: underline;
 }
-.header-nav-menu-item:hover,
 .header-nav-menu-item:focus {
   color: #404bbf;
   text-decoration: underline;
 }
+.header-nav-menu-first {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
 /** ===========ADRESS==============**/
 .header-address {
   font-style: normal;
@@ -102,17 +112,12 @@ ol {
   color: #ffffff;
 }
 
-.hero-button:hover,
-.hero-button:focus {
+.hero-button:hover {
   background-color: #404bbf;
 }
-.hero-button-text {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #ffffff;
+
+.hero-button:focus {
+  background-color: #404bbf;
 }
 
 /** ===============================**/
@@ -157,16 +162,19 @@ ol {
   color: #2e2f42;
   text-transform: capitalize;
 }
-
+.ourteam-list {
+  background-color: #ffffff;
+}
 .ourteam-item,
 .ourteam-subtitle {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 .ourteam-item,
 .ourteam-item-text {
@@ -206,6 +214,7 @@ ol {
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
+  text-transform: capitalize;
 }
 .portfolio-item,
 .portfolio-item-text {
@@ -222,7 +231,6 @@ ol {
 /** ===========FOOTER==============**/
 .footer {
   background: #2e2f42;
-
 }
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -237,7 +245,7 @@ ol {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #f4f4fd;
