--- a/css/styles.css
+++ b/css/styles.css
@@ -35,12 +35,20 @@ ol {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.header-nav-menu-itemfirst {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
 
-.header-nav-menu-item-first:hover {
+.header-nav-menu-itemfirst:hover {
   color: #404bbf;
   text-decoration: underline;
 }
-.header-nav-menu-item-first:focus {
+.header-nav-menu-itemfirst:focus {
   color: #404bbf;
   text-decoration: underline;
 }
@@ -185,14 +193,14 @@ ol {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
 }
 .portfolio-item {
-  background: #fff;
+  background-color: #ffffff;
 }
 .portfolio-item,
 .portfolio-item-title {
