--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ ol {
 .header-logo-studio {
   color: #2e2f42;
 }
+
 .header-nav-menu-item {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -35,7 +36,7 @@ ol {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.header-nav-menu-itemfirst {
+.header-nav-menu-studio {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -43,12 +44,8 @@ ol {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-
-.header-nav-menu-itemfirst:hover {
-  color: #404bbf;
-  text-decoration: underline;
-}
-.header-nav-menu-itemfirst:focus {
+.header-nav-menu-item:hover,
+.header-nav-menu-item:focus {
   color: #404bbf;
   text-decoration: underline;
 }
@@ -184,9 +181,6 @@ ol {
   color: #434455;
 }
 
-.ourteam-list {
-  background-color: #ffffff;
-}
 /** ===============================**/
 /** =========OUR PORTFOLIO=========**/
 .portfolio-title {
@@ -199,6 +193,7 @@ ol {
   color: #2e2f42;
   text-transform: capitalize;
 }
+
 .portfolio-item {
   background-color: #ffffff;
 }
