--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
 
 body {
   font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: #ffffff;
 }
 a {
   text-decoration: none;
@@ -28,7 +30,7 @@ ol {
   color: #2e2f42;
 }
 
-.header-nav-menu-item {
+.header-nav-menu-link {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -44,8 +46,8 @@ ol {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.header-nav-menu-item:hover,
-.header-nav-menu-item:focus {
+.header-nav-menu-link:hover,
+.header-nav-menu-link:focus {
   color: #404bbf;
   text-decoration: underline;
 }
@@ -120,7 +122,6 @@ ol {
 .aboutus-title {
   clip: rect(0, 0, 0, 0);
   overflow: hidden;
-  position: absolute;
   white-space: nowrap;
 }
 
