--- a/css/styles.css
+++ b/css/styles.css
@@ -30,24 +30,18 @@ ol {
   color: #2e2f42;
 }
 
-.header-nav-menu-link {
-  font-family: "Roboto", sans-serif;
+.header-nav-menu-item {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.header-nav-menu-studio {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
+.header-nav-menu-item .header-nav-menu-link:hover,
+.header-nav-menu-item .header-nav-menu-link:focus {
+  color: #404bbf;
 }
-.header-nav-menu-link:hover,
-.header-nav-menu-link:focus {
+.header-nav-menu-item.header-nav-menu-link:active {
   color: #404bbf;
   text-decoration: underline;
 }
