--- a/css/styles.css
+++ b/css/styles.css
@@ -37,11 +37,11 @@ ol {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.header-nav-menu-item .header-nav-menu-link:hover,
-.header-nav-menu-item .header-nav-menu-link:focus {
+.header-nav-menu-link:hover,
+.header-nav-menu-link:focus {
   color: #404bbf;
 }
-.header-nav-menu-item .header-nav-menu-link:active {
+.header-nav-menu-link:active {
   color: #404bbf;
   text-decoration: underline;
 }
