--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,7 @@ ol {
 .portfolio-item {
   background-color: #ffffff;
 }
-
+.portfolio-item,
 .portfolio-item-title {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -206,7 +206,7 @@ ol {
   text-align: center;
   text-transform: capitalize;
 }
-
+.portfolio-item,
 .portfolio-item-text {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
